fix(navbar): increase the `z-index` value

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -43,7 +43,8 @@
 .nav-items {
   background-color: var(--light-gray-color);
   list-style: none;
-  
+  z-index: 2;
+
   &:not(.is-nested) {
     display: flex;
     justify-content: flex-end;
